--- a/templates/layout.html
+++ b/templates/layout.html
@@ -36,6 +36,9 @@
                     </ul>
                     <ul class="navbar-nav ml-auto mt-2">
                     </ul>
+                    <ul class="navbar-nav ml-auto mt-2">
+                        <li class="nav-item"><a class="nav-link" href="/logout">End Session</a></li>
+                    </ul>
                 {% else %}
                     <ul class="navbar-nav ml-auto mt-2">                      
                         <li class="nav-item"><a class="nav-link" href="/login">Log In</a></li>
