--- a/templates/login.html
+++ b/templates/login.html
@@ -8,9 +8,9 @@
 
     <form action="/login" method="post">
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Name" type="text">
         </div>
-        <button class="btn btn-primary" type="submit">Log In</button>
+        <button class="btn btn-primary" type="submit">Submit</button>
     </form>
 
 {% endblock %}
