--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 
 <html lang="en">
-
     <head>
 
         <meta charset="utf-8">
-        <meta name="viewport" content="initial-scale=1, width=device-width">
+        <!-- https://developer.android.com/guide/webapps/targeting -->
+        <meta name="viewport" content="
+          height = [pixel_value | "device-height"] ,
+          width = [pixel_value | "device-width"] ,
+          initial-scale = float_value ,
+          minimum-scale = float_value ,
+          maximum-scale = float_value ,
+          user-scalable = ["yes" | "no"]
+          " />
 
+        
         <!-- http://getbootstrap.com/docs/4.5/ -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
