--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,8 @@
 body {
     width:100%;
     height:100%;
+    margin: 0;
+
 }
 
 nav .navbar-brand
@@ -56,7 +58,7 @@ main img
     background-color: #ccf2ff;
 }
     
-}
+
 #level1, #level3
 {
     background-color: #e6fff2;
@@ -79,4 +81,32 @@ main img
 
 .musicM{
     border: 4px solid;
+}
+.show {
+    visibility : visible;
+}
+
+#myCanvas:fullscreen {
+    background-color: white;
+    border: 10px #dbbd69 solid; 
+}
+#myCanvas:-webkit-full-screen {
+    background-color: white;
+    border: 10px #dbbd69 solid;  
+}
+#myCanvas:-moz-full-screen {
+    background-color: white;
+    border: 10px #dbbd69 solid; 
+}
+
+#viewport 
+{ 
+  height: 100%; 
+  width: 100%; 
+} 
+
+.cont {
+    position: relative;
+    width: 625px;
+    height: 350px;
 }
